tests/NormalTests/paczka1/small_fuzzy/88419903.err
Error in line 4: S429 S429 70,0
Error in line 1: u37vzMqt A463 67,8
Error in line 13: yhYMxyqDdg S780 41,0
Error in line 14: yhYMxyqDdg S841 21,0
